Fix CSS in header

--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -12,7 +12,7 @@
 	</section>
 	<section class="main__section--purchase">
       <div class="container--grid">
-			<h2 id="reasons" class="main__section--title-center">3 Reasons To Purchase</h2>
+			<h2 id="purchase" class="main__section--title-center">3 Reasons To Purchase</h2>
 			<include
 				src="./articles_reasons.html"
 				number="-1"
