--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -1,6 +1,6 @@
 <header class="header" id="top">
 	<nav class="header__nav">
-    <a href="https://adalab.es" target="_blank" class="footer__list--link">
+    <a href="https://adalab.es" target="_blank" class="header__link">
       <img class="header__img" src="./assets/images/ico-menu.svg" title="Menú" alt="Icono menú"/>
     </a>
 	</nav>
@@ -9,9 +9,9 @@
 		<span class="header__title--span">Proxy</span>
 	</h1>
 	<h2 class="header__subtitle">In hac habitasse platea dictumst.</h2>
-	<a href="#reasons" class="link">
+	<a href="#purchase" class="link">
 		<div class="nav__icon">
-			<img src="./assets/images/ico-scroll-down.svg" alt="icon header" class="nav__icon--img --down" />
+			<img src="./assets/images/ico-scroll-down.svg" alt="Icon header" class="nav__icon--down" />
 		</div>
 	</a>
 </header>
