Fix font function

--- a/src/scss/core/_mixins.scss
+++ b/src/scss/core/_mixins.scss
@@ -16,7 +16,7 @@
 }
 
 //text function
-@mixin sizeHeight($fontSize, $lineHeight) {
+@mixin sizeLine($fontSize, $lineHeight) {
   font-size: $fontSize;
   line-height: $lineHeight;
 }
