--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -56,7 +56,7 @@
 }
 .copyright {
 	&__small {
-		@include sizeHeight(14px, 30px);
+		@include sizeLine(14px, 30px);
 		&--icon {
 			color: $deco-brand;
 		}
@@ -66,7 +66,7 @@
 	background-color: $dark-brand;
 	color: $color-bg;
 	@include robotoRegular {
-		@include sizeHeight(16px, 30px);
+		@include sizeLine(16px, 30px);
 	}
 	&__list {
 		text-transform: uppercase;
