Delete __section class in SCSS

--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -1,18 +1,18 @@
 <main class="main">
-	<section class="main__section--tips">
+	<section class="main--tips">
 		<div class="container--insomnia">
-			<h4 class="main__section--title-small">Insomnia Tips</h4>
-			<h2 class="main__section--title">Looking Through A Window</h2>
-			<p class="main__section--paragraph">
+			<h4 class="main--title-small">Insomnia Tips</h4>
+			<h2 class="main--title">Looking Through A Window</h2>
+			<p class="main--paragraph">
 				Donec accumsan, nulla ut volutpat porttitor, quam odio tempus felis, at luctus ex diam nec lectus. Vivamus
 				semper sodales rutrum.
 			</p>
-			<button class="main__section--tips-button">Go</button>
+			<button class="main--tips-button">Go</button>
 		</div>
 	</section>
-	<section class="main__section--purchase">
+	<section class="main--purchase">
       <div class="container--grid">
-			<h2 id="purchase" class="main__section--title-center">3 Reasons To Purchase</h2>
+			<h2 id="purchase" class="main--title-center">3 Reasons To Purchase</h2>
 			<include
 				src="./articles_reasons.html"
 				number="-1"
@@ -31,7 +31,7 @@
 				h3Article="Morbi dictum" 
 				pArticle="Aliquam in dolor et dolor tincidunt.">
 			</include>
-			<button class="main__section--purchase-button">More reasons</button>
+			<button class="main--purchase-button">More reasons</button>
     </div>
     </section>	
 </main>
