Fix containers in _page.scss

--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -1,6 +1,6 @@
 <main class="main">
 	<section class="main--tips">
-		<div class="container--insomnia">
+		<div class="main__container--insomnia">
 			<h4 class="main--title-small">Insomnia Tips</h4>
 			<h2 class="main--title">Looking Through A Window</h2>
 			<p class="main--paragraph">
@@ -11,7 +11,7 @@
 		</div>
 	</section>
 	<section class="main--purchase">
-      <div class="container--grid">
+      <div class="main__container--grid">
 			<h2 id="purchase" class="main--title-center">3 Reasons To Purchase</h2>
 			<include
 				src="./articles_reasons.html"
