Fix _page.scss buttons

--- a/src/scss/layout/_page.scss
+++ b/src/scss/layout/_page.scss
@@ -1,35 +1,37 @@
 .main {
-	&__container--insomnia {
-		margin: 0 15px;
-		@include mediaTablet {
-			margin: 0 40px;
+	&__container{
+		&--insomnia {
+			margin: 0 15px;
+			@include mediaTablet {
+				margin: 0 40px;
+			}
+			@include mediaDesktop {
+				margin: 0 275px;
+			}
 		}
-		@include mediaDesktop {
-			margin: 0 275px;
-		}
-	}
-	&__container--grid {
-		margin: 0 15px;
-		display: grid;
-		grid-template-columns: 1fr;
-		grid-template-rows: 70px 1fr 1fr 1fr 150px;
-		grid-template-areas: "title" "reason1" "reason2" "reason3" "button";
-		@include mediaTablet {
-			margin: 0 40px;
+		&--grid {
+			margin: 0 15px;
 			display: grid;
-			grid-template-columns: 1fr 1fr 1fr;
-			grid-template-rows: 75px 1fr 165px;
-			grid-template-areas: "title title title" "reason1 reason2 reason3" "button button button";
-		}
-		@include mediaDesktop {
-			margin: 0 auto;
-			grid-template-rows: 150px 1fr 165px;
-			max-width: 1200px;
+			grid-template-columns: 1fr;
+			grid-template-rows: 70px 1fr 1fr 1fr 150px;
+			grid-template-areas: "title" "reason1" "reason2" "reason3" "button";
+			@include mediaTablet {
+				margin: 0 40px;
+				display: grid;
+				grid-template-columns: 1fr 1fr 1fr;
+				grid-template-rows: 75px 1fr 165px;
+				grid-template-areas: "title title title" "reason1 reason2 reason3" "button button button";
+			}
+			@include mediaDesktop {
+				margin: 0 auto;
+				grid-template-rows: 150px 1fr 165px;
+				max-width: 1200px;
+			}
 		}
 	}
-	&--tips {
+	&__tips {
 		background-color: $color-bg;
-		&-button {
+		&--button {
 			width: 76px;
 			height: 45px;
 			@include robotoMedium {
@@ -105,9 +107,9 @@
 			}
 		}
 	}
-	&--purchase {
+	&__purchase {
 		background-color: $color-bg-2;
-		&-button {
+		&--button {
 			width: 184px;
 			height: 45px;
 			background-color: $deco-brand;
