--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -1,5 +1,5 @@
 <main class="main">
-	<section class="main--tips">
+	<section class="main__tips">
 		<div class="main__container--insomnia">
 			<h4 class="main--title-small">Insomnia Tips</h4>
 			<h2 class="main--title">Looking Through A Window</h2>
@@ -7,10 +7,10 @@
 				Donec accumsan, nulla ut volutpat porttitor, quam odio tempus felis, at luctus ex diam nec lectus. Vivamus
 				semper sodales rutrum.
 			</p>
-			<button class="main--tips-button">Go</button>
+			<button class="main__tips--button">Go</button>
 		</div>
 	</section>
-	<section class="main--purchase">
+	<section class="main__purchase">
       <div class="main__container--grid">
 			<h2 id="purchase" class="main--title-center">3 Reasons To Purchase</h2>
 			<include
@@ -31,7 +31,7 @@
 				h3Article="Morbi dictum" 
 				pArticle="Aliquam in dolor et dolor tincidunt.">
 			</include>
-			<button class="main--purchase-button">More reasons</button>
+			<button class="main__purchase--button">More reasons</button>
     </div>
     </section>	
 </main>
