--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -1,9 +1,9 @@
 <main class="main">
 	<section class="main__tips">
 		<div class="main__container--insomnia">
-			<h4 class="main--title-small">Insomnia Tips</h4>
-			<h2 class="main--title">Looking Through A Window</h2>
-			<p class="main--paragraph">
+			<h4 class="main__title--small">Insomnia Tips</h4>
+			<h2 class="main__title">Looking Through A Window</h2>
+			<p class="main__title--paragraph">
 				Donec accumsan, nulla ut volutpat porttitor, quam odio tempus felis, at luctus ex diam nec lectus. Vivamus
 				semper sodales rutrum.
 			</p>
@@ -12,7 +12,7 @@
 	</section>
 	<section class="main__purchase">
       <div class="main__container--grid">
-			<h2 id="purchase" class="main--title-center">3 Reasons To Purchase</h2>
+			<h2 id="purchase" class="main__title--center">3 Reasons To Purchase</h2>
 			<include
 				src="./articles_reasons.html"
 				number="-1"
