--- a/src/scss/layout/_page.scss
+++ b/src/scss/layout/_page.scss
@@ -25,7 +25,7 @@
 			@include mediaDesktop {
 				margin: 0 auto;
 				grid-template-rows: 150px 1fr 165px;
-				max-width: 1200px;
+				max-width: 1024px;
 			}
 		}
 	}
@@ -59,7 +59,7 @@
 			}
 		}
 	}
-	&--title {
+	&__title {
 		@include robotoBold {
 			@include sizeLine(24px, 30px);
 			@include mediaTablet {
@@ -69,7 +69,7 @@
 				font-size: 32px;
 			}
 		}
-		&-small {
+		&--small {
 			@include robotoRegular {
 				@include sizeLine(14px, 30px);
 				color: $light-brand;
@@ -79,7 +79,18 @@
 			}
 			margin-top: 30px;
 		}
-		&-center {
+		&--paragraph {
+			@include robotoRegular {
+				@include sizeLine(18px, 30px);
+				color: $color-text;
+				margin-top: 15px;
+				@include mediaTablet {
+					font-size: 20px;
+					margin-top: 30px;
+				}
+			}
+		}
+		&--center {
 			@include robotoBold {
 				@include sizeLine(24px, 30px);
 				text-align: center;
@@ -93,17 +104,6 @@
 			@include mediaDesktop {
 				font-size: 32px;
 				padding-top: 60px;
-			}
-		}
-	}
-	&--paragraph {
-		@include robotoRegular {
-			@include sizeLine(18px, 30px);
-			color: $color-text;
-			margin-top: 15px;
-			@include mediaTablet {
-				font-size: 20px;
-				margin-top: 30px;
 			}
 		}
 	}
