Fix Sass in _page.scss

--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -1,16 +1,16 @@
 <main class="main">
-	<section class="main__tips">
+	<section class="section-tips">
 		<div class="main__container--insomnia">
 			<h4 class="main__title--small">Insomnia Tips</h4>
 			<h2 class="main__title">Looking Through A Window</h2>
-			<p class="main__title--paragraph">
+			<p class="main__paragraph">
 				Donec accumsan, nulla ut volutpat porttitor, quam odio tempus felis, at luctus ex diam nec lectus. Vivamus
 				semper sodales rutrum.
 			</p>
-			<button class="main__tips--button">Go</button>
+			<button class="main__button--tips">Go</button>
 		</div>
 	</section>
-	<section class="main__purchase">
+	<section class="section-purchase">
       <div class="main__container--grid">
 			<h2 id="purchase" class="main__title--center">3 Reasons To Purchase</h2>
 			<include
@@ -31,7 +31,7 @@
 				h3Article="Morbi dictum" 
 				pArticle="Aliquam in dolor et dolor tincidunt.">
 			</include>
-			<button class="main__purchase--button">More reasons</button>
+			<button class="main__button--purchase">More reasons</button>
     </div>
     </section>	
 </main>
