Fix articles in Reasons section in _page.scss

--- a/src/html/partials/articles.html
+++ b/src/html/partials/articles.html
@@ -1,4 +1,4 @@
-<article class="main__article@@number">
+<article class="main__article@@position">
     <h3 class="main__article--title">@@h3Article</h3>
     <p class="main__article--paragraph">@@pArticle</p>
 </article>
