--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -14,20 +14,20 @@
       <div class="main__container--grid">
 			<h2 id="purchase" class="main__title--center">3 Reasons To Purchase</h2>
 			<include
-				src="./articles_reasons.html"
-				number="-1"
+				src="./articles.html"
+				position="-1"
 				h3Article="Ut sed metus"
 				pArticle="Lorem ipsum dolor sit amet, consecteur.">
 			</include>
 			<include
-				src="./articles_reasons.html"
-				number="-2"
+				src="./articles.html"
+				position="-2"
 				h3Article="Curabitur ac erat"
 				pArticle="Mauris mattis urna quis lorem molestie.">
 			</include>
 			<include 
-				src="./articles_reasons.html" 
-				number="-3"
+				src="./articles.html" 
+				position="-3"
 				h3Article="Morbi dictum" 
 				pArticle="Aliquam in dolor et dolor tincidunt.">
 			</include>
