Add max-width to containers for Desktop's mediaquery

--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -1,10 +1,10 @@
 <footer class="footer">
 	<a href="#top" class="link">
-		<div class="nav__icon--footer">
+		<div class="nav__icon--up">
 			<img src="./assets/images/ico-arrow.svg" title="Al inicio" alt="Icono footer" class="nav__icon--img up" />
 		</div>
 	</a>
-	<div class="container-footer">
+	<div class="footer__container">
 		<nav class="footer__nav">
 			<ul class="footer__list footer__list--content">
 				<li class="footer__list--item">
@@ -85,9 +85,9 @@
 				</li>
 			</ul>
 		</nav>
-		<div class="container__copyright copyright">
-			<small class="copyright__small"> &copy; 2021 </small>
-			<small class="copyright__small">we <span class="copyright__small--icon">❤︎</span> components</small>
+		<div class="footer__copyright copyright">
+			<small class="footer__copyright--small"> &copy; 2021 </small>
+			<small class="footer__copyright--small">we <span class="footer__copyright--icon">❤︎</span> components</small>
 		</div>
 	</div>
 </footer>
