--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -4,34 +4,37 @@
 			<h4 class="main__title--small">Insomnia Tips</h4>
 			<h2 class="main__title">Looking Through A Window</h2>
 			<p class="main__paragraph">
-				Donec accumsan, nulla ut volutpat porttitor, quam odio tempus felis, at luctus ex diam nec lectus. Vivamus
-				semper sodales rutrum.
+				Donec accumsan, nulla ut volutpat porttitor, quam odio tempus felis, at luctus ex diam nec lectus. Vivamus semper
+				sodales rutrum.
 			</p>
 			<button class="main__button--tips">Go</button>
 		</div>
 	</section>
 	<section class="section-purchase">
-      <div class="main__container--grid">
+		<div class="main__container--grid">
 			<h2 id="purchase" class="main__title--center">3 Reasons To Purchase</h2>
 			<include
 				src="./articles.html"
 				position="-1"
 				h3Article="Ut sed metus"
-				pArticle="Lorem ipsum dolor sit amet, consecteur.">
+				pArticle="Lorem ipsum dolor sit amet, consecteur."
+			>
 			</include>
 			<include
 				src="./articles.html"
 				position="-2"
 				h3Article="Curabitur ac erat"
-				pArticle="Mauris mattis urna quis lorem molestie.">
+				pArticle="Mauris mattis urna quis lorem molestie."
+			>
 			</include>
-			<include 
-				src="./articles.html" 
+			<include
+				src="./articles.html"
 				position="-3"
-				h3Article="Morbi dictum" 
-				pArticle="Aliquam in dolor et dolor tincidunt.">
+				h3Article="Morbi dictum"
+				pArticle="Aliquam in dolor et dolor tincidunt."
+			>
 			</include>
 			<button class="main__button--purchase">More reasons</button>
-    </div>
-    </section>	
+		</div>
+	</section>
 </main>
