--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -4,7 +4,8 @@
 	justify-content: flex-end;
 	align-items: center;
 	height: 100vh;
-	background: url("../images/cover.jpg") no-repeat center / cover fixed;
+	background: linear-gradient(to bottom, rgba(255, 255, 255, 0.5) 25%, black), url("../images/cover.jpg") no-repeat center / cover fixed;
+	background-blend-mode: multiply;
 	&__nav {
 		width: 44px;
 		height: 44px;
