Add section for prices

--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -10,6 +10,11 @@
 			<button class="main__button--tips">Go</button>
 		</div>
 	</section>
+	<section class="section-pricing">
+		<h2 class="main__title--center pricing-main-title">Pricing</h2>
+	<h3 class="main__article--title pricing-title"> Plan normal</h3>
+	<h3 class="main__article--title pricing-title">Plan premium</h3>
+</section>
 	<section class="section-purchase">
 		<div class="main__container--grid">
 			<h2 id="purchase" class="main__title--center">3 Reasons To Purchase</h2>
