--- a/src/html/partials/link.html
+++ b/src/html/partials/link.html
@@ -1,1 +1,1 @@
-<a class="@@aClass" href="@@url" target="_blank">@@text</a>
+<a class="@@aClass" href="@@url" target="_blank" title="Ir a web de Adalab">@@text</a>
