Add some fixes from project's issue

--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -1,17 +1,17 @@
 <header class="header" id="top">
 	<nav class="header__nav">
 		<a href="https://adalab.es" target="_blank" class="header__link">
-			<img class="header__img" src="./assets/images/ico-menu.svg" title="Menú" alt="Icono menú" />
+			<img class="header__img" src="./assets/images/ico-menu.svg" title="Abrir menú" alt="Icono menú" />
 		</a>
 	</nav>
 	<h1 class="header__title">
 		<span class="header__title--span">Anonymous</span>
-		<span class="header__title--span">Proxy</span>
+		<span class="header__title--span">proxy</span>
 	</h1>
 	<h2 class="header__subtitle">In hac habitasse platea dictumst.</h2>
 	<a href="#purchase" class="link">
 		<div class="nav__icon">
-			<img src="./assets/images/ico-scroll-down.svg" alt="Icon header" class="nav__icon--down" />
+			<img src="./assets/images/ico-scroll-down.svg" alt="Icon header" title="Ir a sección compra" class="nav__icon--down" />
 		</div>
 	</a>
 </header>
