--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -1,8 +1,8 @@
 <main class="main">
 	<section class="section-tips">
 		<div class="main__container--insomnia">
-			<h4 class="main__title--small">Insomnia Tips</h4>
-			<h2 class="main__title">Looking Through A Window</h2>
+			<h4 class="main__title--small">Insomnia tips</h4>
+			<h2 class="main__title">Looking through a window</h2>
 			<p class="main__paragraph">
 				Donec accumsan, nulla ut volutpat porttitor, quam odio tempus felis, at luctus ex diam nec lectus. Vivamus semper
 				sodales rutrum.
