--- a/src/scss/layout/_page.scss
+++ b/src/scss/layout/_page.scss
@@ -149,6 +149,7 @@
 				font-size: 24px;
 				margin-left: 0;
 				margin-right: 0;
+				margin-bottom: 14px;
 			}
 			@include mediaDesktop {
 				margin-top: 0;
