Add evaluation fixes

--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -1,7 +1,7 @@
 <footer class="footer">
 	<a href="#top" class="link">
 		<div class="nav__icon--up">
-			<img src="./assets/images/ico-arrow.svg" title="Al inicio" alt="Icono footer" class="nav__icon--img up" />
+			<img src="./assets/images/ico-arrow.svg" title="Go to top" alt="Icono footer" class="nav__icon--img up" />
 		</div>
 	</a>
 	<div class="footer__container">
@@ -14,6 +14,7 @@
 						aClass="footer__list--link"
 						text="Articles"
 						target="_blank"
+						title="Go to Articles"
 					></include>
 				</li>
 				<li class="footer__list--item">
@@ -23,6 +24,7 @@
 						aClass="footer__list--link"
 						text="Books"
 						target="_blank"
+						title="Go to Books"
 					></include>
 				</li>
 				<li class="footer__list--item">
@@ -32,6 +34,7 @@
 						aClass="footer__list--link"
 						text="Events"
 						target="_blank"
+						title="Go to Events"
 					></include>
 				</li>
 				<li class="footer__list--item">
@@ -41,6 +44,7 @@
 						aClass="footer__list--link"
 						text="Reasons"
 						target="_blank"
+						title="Go to Reasons"
 					></include>
 				</li>
 				<li class="footer__list--item">
@@ -50,6 +54,7 @@
 						aClass="footer__list--link"
 						text="Tips"
 						target="_blank"
+						title="Go to Tips"
 					></include>
 				</li>
 			</ul>
@@ -63,6 +68,7 @@
 						aClass="footer__list--link"
 						text="Twitter"
 						target="_blank"
+						title="Go to Twitter"
 					></include>
 				</li>
 				<li class="footer__list--item">
@@ -72,6 +78,7 @@
 						aClass="footer__list--link"
 						text="Instagram"
 						target="_blank"
+						title="Go to Instagram"
 					></include>
 				</li>
 				<li class="footer__list--item">
@@ -81,6 +88,7 @@
 						aClass="footer__list--link"
 						text="Mastodon.social"
 						target="_blank"
+						title="Go to Mastodon.social"
 					></include>
 				</li>
 			</ul>
