Revert branch test

--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -28,12 +28,11 @@
 			>
 			<include
 				src="./articles.html"
-				position="-4"
-				h3Article="Estamos de pruebas"
-				pArticle="A ver si entendemos las ramas."
+				position="-3"
+				h3Article="Morbi dictum"
+				pArticle="Aliquam in dolor et dolor tincidunt."
 			>
 			</include>
-
 			<button class="main__button--purchase">More reasons</button>
 		</div>
 	</section>
